変更できているのか確認